# crypto-agent

./: .gitignore  README.md  pyproject.toml  ruff.toml
.idx/: dev.nix
docker-compose/: Makefile  news-signal-live-pipeline.yaml  redpanda.yaml  technical-indicators-historical-pipeline.yaml  technical-indicators-live-pipeline.yaml  technical-indicators-pipeline.yaml
services/candles/: Makefile  README.md  config.py  historical.settings.env  live.settings.env  pyproject.toml  run.py  settings.env
services/news/: Makefile  README.md  config.py  historical.settings.env  live.settings.env  news_data_source.py  news_downloader.py  pyproject.toml  run.py  settings.env
services/news-signal/: Dockerfile  Makefile  README.md  config.py  golden_dataset.py  pyproject.toml  run.py  settings.env
services/news-signal/data/: golden_dataset_ollama.json  golden_dataset_openai.json
services/news-signal/llms/: base.py  config.py  factory.py  ollama.py  openai.py  prompt_template.py
services/news/sources/: factory.py  historical_data_source.py  news_data_source.py
services/technical-indicators/: Makefile  README.md  candle.py  config.py  historical.settings.env  run.py  technical_indicators.py
services/to-feature-store/: Dockerfile  Makefile  README.md  config.py  historical.settings.env  live.settings.env  live.settings.news-signal.env  run.py  settings.env  sink.py
services/trades/: Makefile  README.md  config.py  historical.settings.env  live.settings.env  naive.Dockerfile  onestage.Dockerfile  pyproject.toml  run.py  settings.env
services/trades/kraken_api/: base.py  (+4 more)
